--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
           <p class="p2">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Veritatis possimus corporis voluptate nostrum suscipit. Necessitatibus iusto, tenetur accusamus hic dicta earum, voluptate eveniet unde quam consequuntur provident asperiores sint quo officiis deleniti iste eaque exercitationem sunt neque mollitia assumenda? Debitis.</p>
         </div>
         <div class="img-abt">
-          <img src="./imgs/hfood.png" alt="Healthy Food">
+          <img src="hfood.png" alt="Healthy Food">
         </div>
     </div>
   </section>
@@ -48,21 +48,21 @@
     <h2 class="head1">Types Of Food</h2>
     <div class="imgs">
       <div class="img1">
-        <img src="./imgs/fruits.jpg" alt="">
+        <img src="fruits.jpg" alt="">
         <div class="txt1">
           <h2>Fruits</h2>
           <a href="https://en.wikipedia.org/wiki/Fruit" target="_blank">Learn More</a>
         </div>
       </div>
       <div class="img2">
-        <img src="./imgs/vege.jpg" alt="">
+        <img src="vege.jpg" alt="">
         <div class="txt2">
           <h2>Vegetables</h2>
           <a href="https://en.wikipedia.org/wiki/Vegetable" target="_blank">Learn More</a>
         </div>
       </div>
       <div class="img3">
-        <img src="./imgs/pulses.jpeg" alt="">
+        <img src="pulses.jpeg" alt="">
         <div class="txt3">
           <h2>Pulses</h2>
           <a href="https://en.wikipedia.org/wiki/Pulse" target="_blank">Learn More</a>
@@ -75,7 +75,7 @@
     <h2 class="head-menu">Food Menu</h2>
     <div class="row1">
       <div class="left1">
-        <img src="./imgs/lasagna.jpg" alt="Vegetable lasagna">
+        <img src="lasagna.jpg" alt="Vegetable lasagna">
         <div class="det1">
           <h3>Vegetable Lasagna</h3>
           <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Accusamus, architecto.</p>
@@ -83,7 +83,7 @@
         </div>
       </div>
       <div class="right1">
-        <img src="./imgs/salad.jpg" alt="Vegetable lasagna">
+        <img src="salad.jpg" alt="Vegetable lasagna">
         <div class="det2">
           <h3>Vegetable Boshwin Salad</h3>
           <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Accusamus, architecto.</p>
@@ -93,7 +93,7 @@
     </div>
     <div class="row2">
       <div class="left2">
-        <img src="./imgs/cereal.jpg" alt="Vegetable lasagna">
+        <img src="cereal.jpg" alt="Vegetable lasagna">
         <div class="det3">
           <h3>Veggie Sausage</h3>
           <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Accusamus, architecto.</p>
@@ -101,7 +101,7 @@
         </div>
       </div>
       <div class="right2">
-        <img src="./imgs/pasta.jpg" alt="Vegetable lasagna">
+        <img src="pasta.jpg" alt="Vegetable lasagna">
         <div class="det4">
           <h3>Pasta Bolognese</h3>
           <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Accusamus, architecto.</p>
@@ -111,7 +111,7 @@
     </div>
     <div class="row3">
       <div class="left3">
-        <img src="./imgs/appie.jpeg" alt="Vegetable lasagna">
+        <img src="appie.jpeg" alt="Vegetable lasagna">
         <div class="det5">
           <h3>Custard Sofie</h3>
           <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Accusamus, architecto.</p>
@@ -119,7 +119,7 @@
         </div>
       </div>
       <div class="right3">
-        <img src="./imgs/cakepie.jpg" alt="Vegetable lasagna">
+        <img src="cakepie.jpg" alt="Vegetable lasagna">
         <div class="det6">
           <h3>Vanilla Hover Brownie</h3>
           <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Accusamus, architecto.</p>
@@ -139,7 +139,7 @@
         <span class="fa fa-star checked"></span>
         <span class="fa fa-star checked"></span>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum quis perferendis ratione voluptas, voluptates culpa?</p>
-        <img src="./imgs/pp1.jpg" alt="Amanda Kathy">
+        <img src="pp1.jpg" alt="Amanda Kathy">
         <h3 class="nameOfPerson">Amanda Kethy</h3>
       </div>
       <div class="secondPerson">
@@ -149,7 +149,7 @@
         <span class="fa fa-star checked"></span>
         <span class="fa fa-star checked"></span>
         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ullam et nisi deserunt ad deleniti</p>
-        <img src="./imgs/pp2.jpg" alt="Amanda Kathy">
+        <img src="pp2.jpg" alt="Amanda Kathy">
         <h3 class="nameOfPerson">Simon Dowell</h3>
       </div>
       <div class="thirdPerson">
@@ -159,7 +159,7 @@
         <span class="fa fa-star checked"></span>
         <span class="fa fa-star checked"></span>
         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nulla, velit beatae nesciunt delenitti cuipa!</p>
-        <img src="./imgs/pp3.jpg" alt="Amanda Kathy">
+        <img src="pp3.jpg" alt="Amanda Kathy">
         <h3 class="nameOfPerson">Janie Lucifer</h3>
       </div>
     </div>
@@ -168,7 +168,7 @@
   </div>
   <section class="rest1">
     <div class="img-box">
-      <img src="./imgs/rest1.jpg" alt="Food World">
+      <img src="rest1.jpg" alt="Food World">
     </div>
     <div class="form-fill">
       <form>
