--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
           <p class="p2">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Veritatis possimus corporis voluptate nostrum suscipit. Necessitatibus iusto, tenetur accusamus hic dicta earum, voluptate eveniet unde quam consequuntur provident asperiores sint quo officiis deleniti iste eaque exercitationem sunt neque mollitia assumenda? Debitis.</p>
         </div>
         <div class="img-abt">
-          <img src="./hfood.png" alt="Healthy Food">
+          <img src="hfood.png" alt="Healthy Food">
         </div>
     </div>
   </section>
